Commit merged directories

--- a/CSS/styles1.css
+++ b/CSS/styles1.css
@@ -4,3 +4,6 @@
     font-style: italic;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+#company-header {
+    font-size: 4rem;
+}
