--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,44 +7,60 @@
     padding-left: 2rem;
     margin: 0px;
 }
+
 .company-header {
-  font-family:'Brush Script MT', cursive;
-  color:deeppink;
-  font-size: 4rem;
-  padding-left:4rem;
-}
-.journal-entry{
-  padding-left:10%;
+    font-family: 'Brush Script MT', cursive;
+    color: deeppink;
+    font-size: 4rem;
+    padding-left: 4rem;
 }
 
-#section-rig{
+.journal-entry {
+    padding-left: 10%;
+}
+
+#section-rig {
     background-color: #ffd400;
-    color:white;
-    height:6rem;
+    color: white;
+    height: 6rem;
     font-size: 2rem;
-    padding-left:30%;
+    padding-left: 30%;
 }
-#section-travels{
-    background-color:lightskyblue;
-    color:white;
-    height:6rem;
+
+#section-travels {
+    background-color: lightskyblue;
+    color: white;
+    height: 6rem;
     font-size: 2rem;
-    padding-left:50%;
+    padding-left: 50%;
 }
+
 /* #section-travels  */
-#writings{
+#writings {
     /* background-color:lightsalmon; */
-    color:white;
-    height:4rem;
+    color: white;
+    height: 8rem;
     font-size: 2rem;
     /* padding-left:50%; */
-    background: rgb(135,206,250);
-    background: linear-gradient(79deg, rgba(135,206,250,1) 0%, rgba(135,206,250,1) 39%, rgba(255,160,122,1) 64%);
+    background: rgb(135, 206, 250);
+    background: linear-gradient(79deg, rgba(135, 206, 250, 1) 0%, rgba(135, 206, 250, 1) 39%, rgba(255, 160, 122, 1) 64%);
 }
-#section-projects{
+
+#section-projects {
     background-color: maroon;
-    color:white;
-    height:6rem;
+    color: white;
+    height: 6rem;
     font-size: 2rem;
-    padding-left:70%;
+    padding-left: 70%;
+}
+
+.subtitle-header {
+    /* font-family: 'Brush Script MT', cursive; */
+    padding-left:4rem;
+    margin-top:-1rem;
+    color:dodgerblue;
+    font-weight: bold;
+}
+#announcement {
+    font-size: 12px;
 }
